
2011-08-29  Cedric Bail

	* Add colorspaces NV12 and MT12 (64 * 32 macro block tiled
	format, see Linux videodev documentation for more information).

2011-10-17  Shilpa Singh

	* Textblock: Added underline=dashed support.
	Tag changes:
	 - dashed is a legal value for underline
	New tags:
	 - underline_dash_color
	 - underline_dash_width
	 - underline_dash_gap

2011-10-21  Carsten Haitzler (The Rasterman)

	* Add function to request what the largest possible image (or texture)
        size is from evas.

2011-10-27  ChunEon Park (Hermet)

	* Add evas_object_freeze_events_set/get to discard the object events.
	they will be useful some cases such as transition.

2011-11-02  Nicolas Aguirre
	* Add gl_cocoa engine

2011-11-16  Carsten Haitzler (The Rasterman)

        * JPEG encode and decode in eet now uses ISLOW (not IFAST) due to
        noticable quality losses in the chase for speed. It will use
        IFAST for quality less than 60 when encoding    

2011-11-20  Carsten Haitzler (The Rasterman)

        * TGA loader gets fixed alpha decode - real life tga's have
        proper alpha values. also reduce false positive tga file
        detection

2011-11-24  Carsten Haitzler (The Rasterman)

        * Fix repeat event inheritance from parent smart just like
        pass events are inherited. This was inconsistent.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2011-12-05  Sung W. Park

	* Add base for Evas GL Fastpath so evas can fully wrap OpenGL calls
        and monitor GL state etc. and get it right sharing state with
        evas without having to rely specifically on a new GL context.

2011-12-07 Carsten Haitzler (The Rasterman)

        * Fix build if gcc too old - if immintrin.h doesn't exist,
        don't enable SSE3.

2011-12-08  Tom Hacohen (TAsn)

	* Textblock markup: Support self closing format tags, i.e <br/>.
	You should use <br/> and not <br>. The latter still works but it's use
	is discouraged.